--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2530,5 +2530,11 @@
 			.poptrox-popup .closer {
 				opacity: 0.5;
 			}
+			.ifram{
+				margin-top: 100px;
+                margin-bottom: 100px;
+                margin-right: 150px;
+                margin-left: 150px;
+			}
 
 	}
